--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "vue-scheduler",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
+  "author": "Artur Aralin <artur.aralin97@gmail.com>",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
